import groovy.json.JsonOutput

plugins {
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0.16,6.2)'
    id 'org.spongepowered.mixin' version '0.7.+'
    id 'com.matthewprenger.cursegradle' version '1.4.0' // CurseForge uploader
    id "com.modrinth.minotaur" version "2.8.10" // Modrinth uploader
    id 'maven-publish'
}

group = mod_group_id
version = mod_version

def githubPackagesUser = (System.getenv("GITHUB_USER") ?: System.getenv("GITHUB_ACTOR"))?.trim()
def githubPackagesToken = System.getenv("GITHUB_TOKEN")?.trim()
def hasGithubPackagesCredentials = githubPackagesUser && githubPackagesToken

base {
    archivesName = "Forge-" + mod_id
}


java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}

minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')


    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id


        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'

        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {
            workingDirectory project.file('run-data')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

mixin {
    add sourceSets.main, "projectatmosphere.refmap.json" // ⬅️ same as in mixins.json
    config 'projectatmosphere.mixins.json' // ⬅️ same as in mixins.json
}


repositories {
    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
    maven { url "https://maven.blamejared.com/" }
    maven {
        url "https://www.cursemaven.com"
        content { includeGroup "curse.maven" }
    }
    maven {
        name = 'GeckoLib'
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        content {
            includeGroupByRegex('software\\.bernie.*')
            includeGroup("com.eliotlash.mclib")
        }
    }
    maven { url = "https://api.modrinth.com/maven" }
    maven {
        name "nonamecrackers2Maven"
        url "https://maven.nonamecrackers2.dev/releases"
    }
    maven { url "https://maven.theillusivec4.top/" }
    flatDir { dir 'libs' }
    if (hasGithubPackagesCredentials) {
        maven {
            url = uri("https://maven.pkg.github.com/xGabou/Gabou-s-Libs")
            credentials {
                username = githubPackagesUser
                password = githubPackagesToken
            }
        }
    }
    maven {
        name = "Architectury"
        url = "https://maven.architectury.dev/"
    }





}


dependencies {
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    //implementation fg.deobf("curse.maven:serene-seasons-plus-1288843:7027745")
    implementation fg.deobf("nonamecrackers2:simpleclouds:0.7.3+1.20.1-forge")
    implementation fg.deobf("nonamecrackers2:crackerslib-forge:${crackerslib_version}")
    implementation fg.deobf("nonamecrackers2:simplecloudsapi-forge:${api_version}")
    compileOnly(fg.deobf("curse.maven:legendary-survival-overhaul-840254:6717844"))
    compileOnly(fg.deobf("curse.maven:tough-as-nails-246391:5815863"))
    implementation fg.deobf("curse.maven:betterdays-895618:7013807")
    compileOnly fg.deobf("curse.maven:desert-storms-1312888:6931061")
    compileOnly fg.deobf("curse.maven:lodestone-616457:6213794")
    implementation fg.deobf("curse.maven:serene-seasons-plus-1288843:7325179")
    compileOnly fg.deobf("curse.maven:rainboows-1121832:6421980")
    compileOnly fg.deobf("curse.maven:auroras-1105290:6040671")
    implementation fg.deobf("curse.maven:gabous-libs-1367332:7519775")
    implementation fg.deobf("curse.maven:architectury-api-419699:5137938")
    implementation fg.deobf("curse.maven:tectonic-686836:7197834")
    compileOnly fg.deobf("curse.maven:continents-682515:7078247")
    implementation fg.deobf("curse.maven:lithostitched-936015:6742615")
    compileOnly fg.deobf("curse.maven:ecliptic-seasons-1118306:7274743")

    compileOnly fg.deobf("curse.maven:project-atmosphere-for-tfc-1391548:7261639")
    compileOnly fg.deobf("curse.maven:dynamictrees-252818:7502488")
    //implementation "curse.maven:nolijium-969602:6264798"


//    implementation files(fg.deobf("/libs/Serene Seasons Plus-forge-1.20.1-1.20.1-3.0.4.jar"))
    implementation fg.deobf(files("libs/tectonic-3.0.17-forge-1.20.1-dev.jar"))


    //runtimeOnly(fg.deobf("curse.maven:legendary-survival-overhaul-840254:6717844"))
    //runtimeOnly(fg.deobf("curse.maven:tough-as-nails-246391:5815863"))

    runtimeOnly fg.deobf("curse.maven:chloride-931925:6615986")
    runtimeOnly fg.deobf("curse.maven:embeddium-908741:5681725")
    runtimeOnly fg.deobf("curse.maven:distant-horizons-508933:7375280")

    // Local dependency, ensure the file exists in the libs directory
    // Example mod dependency with JEI - using fg.deobf() ensures the dependency is remapped to your development mappings
    // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
    compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:15.8.2.26")
    compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:15.8.2.26")
    runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge:15.8.2.26")
    runtimeOnly(fg.deobf("curse.maven:jade-324717:6271651"))
    implementation fg.deobf("curse.maven:serene-seasons-291874:6398227")
    implementation fg.deobf("curse.maven:glitchcore-955399:5787839")
    implementation fg.deobf("curse.maven:spark-361579:4738952")
    implementation fg.deobf("curse.maven:cloth-config-348521:5729105")
    compileOnly fg.deobf("curse.maven:cold-sweat-506194:6880105")
}

tasks.named('processResources', ProcessResources).configure {
    def replaceProps = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version          : forge_version,
            forge_version_range    : forge_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            mod_logo_file          : logo_file,
            mod_mixins             : mod_mixins,
    ]
    inputs.properties replaceProps
    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProps + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                "Specification-Title"     : mod_id,
                "Specification-Vendor"    : mod_authors,
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.version,
                "Implementation-Vendor"   : mod_authors,
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
    finalizedBy 'reobfJar'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += [
            "-AoutRefMapFile=${buildDir}/classes/java/main/projectatmosphere.refmap.json",
            "-AreobfSrgFile=${buildDir}/tmp/reobf/SRG.srg"
    ]
}

def releaseJarFile = layout.buildDirectory.file("libs/${base.archivesName.get()}-${project.version}.jar")

tasks.register("discordWebhook") {
    doLast {
        def webhookUrl = System.getenv("DISCORD_WEBHOOK_URL")?.trim()
        if (!webhookUrl) {
            println "Skipping Discord webhook notification: DISCORD_WEBHOOK_URL not set."
            return
        }

        def changelogText = rootProject.file("PAchangelog.md").text

        def payload = [
                username        : "Build Bot",
                allowed_mentions: [parse: ["roles"]],
                content         : "**New release published!** 🎉\n" +
                        "<@&1401956072784269443>\n" + // role mention
                        "Project: ${mod_name}\n" +
                        "Version: v${project.mod_version}-1.20.1\n\n" +
                        "${changelogText.take(1891)}"
        ]

        println "Sending release notification to Discord..."
        def connection = new URL(webhookUrl).openConnection()
        connection.with {
            doOutput = true
            requestMethod = "POST"
            setRequestProperty("Content-Type", "application/json")
            outputStream.withWriter("UTF-8") { it << JsonOutput.toJson(payload) }
            println "Webhook sent with response code: ${responseCode}"
        }
    }
}
modrinth {
    token = System.getenv("MODRINTH_TOKEN")
    projectId = "qIWoLcKJ" // from your Modrinth project URL
    versionNumber = "Forge-${project.version}"
    versionName = "Project Atmosphere ${mod_version}"
    changelog = rootProject.file("PAchangelog.md").text
    gameVersions = ["1.20.1"]
    loaders = ["forge"]
    versionType = "beta"
    dependencies {
        optional.project "e0bNACJD"
        optional.project "4Al4H3t9"
        required.project "LtZfKhel"
        required.project "N8aGZtvj"
    }
    uploadFile = releaseJarFile.get().asFile
}
def curseForgeToken = System.getenv("CURSEFORGE_TOKEN")?.trim()
if (curseForgeToken) {
    curseforge {
        apiKey = curseForgeToken

        project {
            id = "1258344"
            changelog = rootProject.file("PAchangelog.md")
            releaseType = "beta" // options: alpha, beta, release
            addGameVersion "1.20.1"
            addGameVersion "Forge"
            mainArtifact(releaseJarFile.get().asFile) {
                displayName = "Forge-${version}"
            }
        }
    }
} else {
    logger.lifecycle("CURSEFORGE_TOKEN not set; CurseForge upload tasks will be disabled.")
    tasks.matching { it.name.toLowerCase().contains("curseforge") }.configureEach { enabled = false }
}
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            groupId = 'net.gabou'          // your group
            artifactId = 'PA'       // your library name
            version = project.version              // update per release
        }
    }

    repositories {
        if (hasGithubPackagesCredentials) {
            maven {
                name = "GitHubPackages"
                url = uri("https://maven.pkg.github.com/xGabou/Project-Atmosphere/Forge")
                credentials {
                    username = githubPackagesUser
                    password = githubPackagesToken
                }
            }
        }
    }
}

if (!hasGithubPackagesCredentials) {
    logger.lifecycle("GitHub package credentials not set; skipping private GitHub Maven repositories.")
}


